sonar - clean up